--- a/galaxy/libopenshot/.artixlinux/pkgbase.yaml
+++ b/galaxy/libopenshot/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libopenshot
-  version: 0.4.0-6
+  version: 0.4.0-7
   arch:
     - x86_64
   pkgname:
     - libopenshot
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.4.0-6
+    version: 0.4.0-7
     packages:
-      - libopenshot-0.4.0-6-x86_64.pkg.tar.zst
+      - libopenshot-0.4.0-7-x86_64.pkg.tar.zst
 team: galaxy
