--- a/galaxy/libopenshot/PKGBUILD
+++ b/galaxy/libopenshot/PKGBUILD
@@ -1,5 +1,4 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Caleb Maclennan <caleb@alerque.com>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
 # Contributor: David Runge <dvzrv@archlinux.org>
 # Contributor: Martin Wimpress <code@flexion.org>
 # Contributor: Foster McLane <fkmclane@gmail.com>
@@ -7,7 +6,7 @@
 
 pkgname=libopenshot
 pkgver=0.4.0
-pkgrel=6
+pkgrel=7
 pkgdesc="A video editing, animation, and playback library for C++, Python, and Ruby"
 arch=(x86_64)
 url="https://github.com/openshot/libopenshot"
