--- a/world/cuda/.artixlinux/pkgbase.yaml
+++ b/world/cuda/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: cuda
-  version: 12.8.1-2
+  version: 12.8.1-3
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - cuda-tools
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 12.8.1-2
+    version: 12.8.1-3
     packages:
-      - cuda-12.8.1-2-x86_64.pkg.tar.zst
-      - cuda-tools-12.8.1-2-x86_64.pkg.tar.zst
+      - cuda-12.8.1-3-x86_64.pkg.tar.zst
+      - cuda-tools-12.8.1-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
