--- a/world/i2pd/.artixlinux/pkgbase.yaml
+++ b/world/i2pd/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: i2pd
-  version: 2.56.0-1
+  version: 2.56.0-2
   arch:
     - x86_64
   pkgname:
     - i2pd
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.56.0-1
+    version: 2.56.0-2
     packages:
-      - i2pd-2.56.0-1-x86_64.pkg.tar.zst
+      - i2pd-2.56.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
