--- a/world/leatherman/PKGBUILD
+++ b/world/leatherman/PKGBUILD
@@ -1,12 +1,11 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Contributor: Tim Meusel <tim@bastelfreak.de>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Tim Meusel <tim@bastelfreak.de>
 # Contributor: Christian Rebischke <chris.rebischke at archlinux.org>
 # Contributor: Jonathan Steel <jsteel at archlinux.org>
 
 pkgname=leatherman
 pkgver=1.12.9
-pkgrel=6.1
+pkgrel=7
 pkgdesc="Collection of C++ and CMake utility libraries"
 arch=('x86_64')
 url="https://github.com/puppetlabs/leatherman"
@@ -62,6 +61,7 @@ build() {
     -DBoost_NO_BOOST_CMAKE=ON \
     -DLEATHERMAN_SHARED=ON \
     -DLEATHERMAN_USE_ICU=ON \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
     ..
   make
 }
