--- a/world/leatherman/.artixlinux/pkgbase.yaml
+++ b/world/leatherman/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: leatherman
-  version: 1.12.9-6.1
+  version: 1.12.9-7
   arch:
     - x86_64
   pkgname:
     - leatherman
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.12.9-6.1
+    version: 1.12.9-7
     packages:
-      - leatherman-1.12.9-6.1-x86_64.pkg.tar.zst
+      - leatherman-1.12.9-7-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
