--- a/world/liborcus/.artixlinux/pkgbase.yaml
+++ b/world/liborcus/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: liborcus
-  version: 0.20.0-2
+  version: 0.20.0-2.1
   arch:
     - x86_64
   pkgname:
     - liborcus
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.20.0-2
+    version: 0.20.0-2.1
     packages:
-      - liborcus-0.20.0-2-x86_64.pkg.tar.zst
+      - liborcus-0.20.0-2.1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
