--- a/world/libtorrent-rasterbar/.artixlinux/pkgbase.yaml
+++ b/world/libtorrent-rasterbar/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libtorrent-rasterbar
-  version: 1:2.0.11-3
+  version: 1:2.0.11-4
   arch:
     - x86_64
   pkgname:
     - libtorrent-rasterbar
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:2.0.11-3
+    version: 1:2.0.11-4
     packages:
-      - libtorrent-rasterbar-1:2.0.11-3-x86_64.pkg.tar.zst
+      - libtorrent-rasterbar-1:2.0.11-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
