--- a/world/libwhereami/.artixlinux/pkgbase.yaml
+++ b/world/libwhereami/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libwhereami
-  version: 0.5.0-20.1
+  version: 0.5.0-21
   arch:
     - x86_64
   pkgname:
     - libwhereami
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.5.0-20.1
+    version: 0.5.0-21
     packages:
-      - libwhereami-0.5.0-20.1-x86_64.pkg.tar.zst
+      - libwhereami-0.5.0-21-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
