--- a/world/maeparser/PKGBUILD
+++ b/world/maeparser/PKGBUILD
@@ -1,9 +1,8 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=maeparser
 pkgver=1.3.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Maestro file parser'
 arch=(x86_64)
 url='https://github.com/schrodinger/maeparser'
