--- a/world/ncmpcpp/.artixlinux/pkgbase.yaml
+++ b/world/ncmpcpp/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ncmpcpp
-  version: 0.10.1-3.1
+  version: 0.10.1-4
   arch:
     - x86_64
   pkgname:
     - ncmpcpp
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.10.1-3.1
+    version: 0.10.1-4
     packages:
-      - ncmpcpp-0.10.1-3.1-x86_64.pkg.tar.zst
+      - ncmpcpp-0.10.1-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
