--- a/world/openvdb/.artixlinux/pkgbase.yaml
+++ b/world/openvdb/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: openvdb
-  version: 12.0.1-1
+  version: 12.0.1-2
   arch:
     - x86_64
   pkgname:
     - openvdb
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 12.0.1-1
+    version: 12.0.1-2
     packages:
-      - openvdb-12.0.1-1-x86_64.pkg.tar.zst
+      - openvdb-12.0.1-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
