--- a/world/powerdns/PKGBUILD
+++ b/world/powerdns/PKGBUILD
@@ -1,6 +1,5 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Contributor: Remi Gacogne <rgacogne[at]archlinux[dot]org>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Remi Gacogne <rgacogne[at]archlinux[dot]org>
 # Contributor: Alexander Rødseth <rodseth@gmail.com>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Kevin Mihelich <kevin@archlinuxarm.org>
@@ -8,7 +7,7 @@
 
 pkgname=powerdns
 pkgver=4.9.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Authoritative DNS server'
 url='https://www.powerdns.com/'
 arch=('x86_64')
@@ -29,10 +28,12 @@ provides=('pdns')
 conflicts=('pdns')
 backup=('etc/powerdns/pdns.conf')
 source=(https://downloads.powerdns.com/releases/pdns-${pkgver}.tar.bz2{,.asc}
-        sysusers.conf)
+        sysusers.conf
+        https://github.com/PowerDNS/pdns/commit/23dd0603.patch)
 sha512sums=('fe597a84443bef2c47fdc8302b0fc3e809a48012cec40c4fafb79196eb13be547846d3bd088a93e3bac31bec94bed904b128afc9b8effd78c63c21178f0b2b1a'
             'SKIP'
-            'c18fc317082b93d52e59526af2df0f1b45cc37622526cc727cac9e6d73dc343ab3d33ad6b5365b30e079650f1c220096f7baf2f750bf1a558d89c144fbc583ac')
+            'c18fc317082b93d52e59526af2df0f1b45cc37622526cc727cac9e6d73dc343ab3d33ad6b5365b30e079650f1c220096f7baf2f750bf1a558d89c144fbc583ac'
+            '34e320d6696950bb12b3ca46a7b1728d4f3c5b0d243fb473ae99caa5ebff078665b4d82caafb8c9582bc770bd24fff3143c0273efebcee5314eab45f9617b0af')
 validpgpkeys=('B76CD4671C0968BAA87DE61C5E50715BF2FFE1A7'   # Winkels, Erik <erik.winkels@open-xchange.com>
               '16E12866B7738C73976A57436FFC33439B0D04DF' ) # Peter van Dijk <peter.van.dijk@powerdns.com>
 
@@ -41,6 +42,8 @@ prepare() {
   # Patch the Makefile.in's so /powerdns is used instead of /pdns (for e.g. $LIBDIR)
   # This allows for running pdns_server without setting `module-dir` in the config.
   find . -name 'Makefile.in' -exec sed -i 's,pkglibdir = \$(libdir)/@PACKAGE@,pkglibdir = $(libdir)/powerdns,' {} \;
+
+  patch -p1 -i ../23dd0603.patch # Fix build with GCC 15
 }
 
 build() {
