--- a/world/python-aiohttp/.artixlinux/pkgbase.yaml
+++ b/world/python-aiohttp/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-aiohttp
-  version: 3.10.11-1
+  version: 3.11.18-1.1
   arch:
     - x86_64
   pkgname:
     - python-aiohttp
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.10.11-1
+    version: 3.11.18-1.1
     packages:
-      - python-aiohttp-3.10.11-1-x86_64.pkg.tar.zst
+      - python-aiohttp-3.11.18-1.1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
