--- a/world/python-awscrt/.artixlinux/pkgbase.yaml
+++ b/world/python-awscrt/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-awscrt
-  version: 0.23.8-1
+  version: 0.26.1-1
   arch:
     - x86_64
   pkgname:
     - python-awscrt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.23.8-1
+    version: 0.26.1-1
     packages:
-      - python-awscrt-0.23.8-1-x86_64.pkg.tar.zst
+      - python-awscrt-0.26.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
