--- a/world/python-lazy-object-proxy/.artixlinux/pkgbase.yaml
+++ b/world/python-lazy-object-proxy/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-lazy-object-proxy
-  version: 1.10.0-4
+  version: 1.11.0-1
   arch:
     - x86_64
   pkgname:
     - python-lazy-object-proxy
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.10.0-4
+    version: 1.11.0-1
     packages:
-      - python-lazy-object-proxy-1.10.0-4-x86_64.pkg.tar.zst
+      - python-lazy-object-proxy-1.11.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
