--- a/world/python-mysql-connector/.artixlinux/pkgbase.yaml
+++ b/world/python-mysql-connector/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-mysql-connector
-  version: 9.2.0-1
+  version: 9.3.0-1
   arch:
     - any
   pkgname:
     - python-mysql-connector
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 9.2.0-1
+    version: 9.3.0-1
     packages:
-      - python-mysql-connector-9.2.0-1-any.pkg.tar.zst
+      - python-mysql-connector-9.3.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
