--- a/world/python-puremagic/.artixlinux/pkgbase.yaml
+++ b/world/python-puremagic/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-puremagic
-  version: 1.28-2
+  version: 1.29-1
   arch:
     - any
   pkgname:
     - python-puremagic
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.28-2
+    version: 1.29-1
     packages:
-      - python-puremagic-1.28-2-any.pkg.tar.zst
+      - python-puremagic-1.29-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
