--- a/world/python-pydantic/.artixlinux/pkgbase.yaml
+++ b/world/python-pydantic/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-pydantic
-  version: 2.11.3-1
+  version: 2.11.4-1
   arch:
     - any
   pkgname:
     - python-pydantic
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.11.3-1
+    version: 2.11.4-1
     packages:
-      - python-pydantic-2.11.3-1-any.pkg.tar.zst
+      - python-pydantic-2.11.4-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
