--- a/world/vigra/.artixlinux/pkgbase.yaml
+++ b/world/vigra/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: vigra
-  version: 1.12.2-1
+  version: 1.12.2-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - python-vigra
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.12.2-1
+    version: 1.12.2-2
     packages:
-      - vigra-1.12.2-1-x86_64.pkg.tar.zst
-      - python-vigra-1.12.2-1-x86_64.pkg.tar.zst
+      - vigra-1.12.2-2-x86_64.pkg.tar.zst
+      - python-vigra-1.12.2-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
