--- a/world/ruby-net-ftp/.artixlinux/pkgbase.yaml
+++ b/world/ruby-net-ftp/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-net-ftp
-  version: 0.3.5-5
+  version: 0.3.8-1
   arch:
     - any
   pkgname:
     - ruby-net-ftp
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.3.5-5
+    version: 0.3.8-1
     packages:
-      - ruby-net-ftp-0.3.5-5-any.pkg.tar.zst
+      - ruby-net-ftp-0.3.8-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
