--- a/world/ruby-net-imap/.artixlinux/pkgbase.yaml
+++ b/world/ruby-net-imap/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-net-imap
-  version: 0.4.12-5
+  version: 0.5.6-1
   arch:
     - any
   pkgname:
     - ruby-net-imap
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.4.12-5
+    version: 0.5.6-1
     packages:
-      - ruby-net-imap-0.4.12-5-any.pkg.tar.zst
+      - ruby-net-imap-0.5.6-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
