--- a/world/ruby-prime/.artixlinux/pkgbase.yaml
+++ b/world/ruby-prime/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-prime
-  version: 0.1.2-4
+  version: 0.1.3-1
   arch:
     - any
   pkgname:
     - ruby-prime
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.2-4
+    version: 0.1.3-1
     packages:
-      - ruby-prime-0.1.2-4-any.pkg.tar.zst
+      - ruby-prime-0.1.3-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
