--- a/world/ruby-public_suffix/.artixlinux/pkgbase.yaml
+++ b/world/ruby-public_suffix/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-public_suffix
-  version: 5.0.5-6
+  version: 6.0.2-1
   arch:
     - any
   pkgname:
     - ruby-public_suffix
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.0.5-6
+    version: 6.0.2-1
     packages:
-      - ruby-public_suffix-5.0.5-6-any.pkg.tar.zst
+      - ruby-public_suffix-6.0.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
