--- a/galaxy/0ad/.artixlinux/pkgbase.yaml
+++ b/galaxy/0ad/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: 0ad
-  version: a27-7
+  version: a27-7.1
   arch:
     - x86_64
   pkgname:
@@ -46,11 +46,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: a27-6
-    packages:
-      - 0ad-a27-6-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   galaxy:
-    version: a27-7
+    version: a27-7.1
     packages:
-      - 0ad-a27-7-x86_64.pkg.tar.zst
+      - 0ad-a27-7.1-x86_64.pkg.tar.zst
 team: galaxy
