--- a/galaxy/qgis/.artixlinux/pkgbase.yaml
+++ b/galaxy/qgis/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: qgis
-  version: 3.42.1-2
+  version: 3.42.2-1
   arch:
     - x86_64
   pkgname:
     - qgis
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,9 +47,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 3.42.1-2
+    version: 3.42.1-3
     packages:
-      - qgis-3.42.1-2-x86_64.pkg.tar.zst
+      - qgis-3.42.1-3-x86_64.pkg.tar.zst
+  galaxy:
+    version: 3.42.2-1
+    packages:
+      - qgis-3.42.2-1-x86_64.pkg.tar.zst
