--- a/world/kosmindoormap/PKGBUILD
+++ b/world/kosmindoormap/PKGBUILD
@@ -1,9 +1,8 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kosmindoormap
 pkgver=25.04.0
-pkgrel=1
+pkgrel=2
 pkgdesc='OSM multi-floor indoor map renderer'
 arch=(x86_64)
 url='https://www.kde.org'
